# fast_api_template

./: .env.example  .gitignore  README.md  alembic.ini  justfile  pyproject.toml  settings.json
alembic/: env.py
app/: config.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  examples.py  users.py
app/core/: exception_handlers.py  logging.py
app/db/: base.py  engine.py  session.py
app/db/postgres_engines/: databricks.py  local.py
app/models/: __init__.py  user.py
app/schemas/: error.py  user.py
docs/: DOCUMENTATION_STYLE_GUIDE.md  database_migration.md  dependency_injection.md
tests/: conftest.py
tests/core/: test_config.py  test_main.py
tests/v1/: test_api_v1_monitoring.py
