[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-api"
version = "0.1.0"
description = "api endpoint for Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "fastapi[standard-no-fastapi-cloud-cli]",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
# Base rules set
# F: `flake8` (default)
# FAST: `fastapi`
# W: `pycodestyle`
# I: `isort`
# N: `pep8-naming`
select = ["FAST", "F", "I", "N", "W"]
# Description of rules set
# E4, E7, E9: `pycodestyle` (default)
# E501: `line-too-long`
extend-select = ["E501", "E4", "E7", "E9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]
